--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -38,9 +38,7 @@ flutter:
     - assets/
     - assets/images/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: MerriweatherSans
+      fonts:
+         - asset: assets/fonts/MerriweatherSans-Regular.ttf
